public/style.css
body {
  font-family: sans-serif;
  font-weight: 400;
  background-color: #ffffff;
  color: #333333;
}

.wrapper {
  max-width: 660px;
  margin: auto;
  padding-right: 10px;
  padding-left: 10px;
}

h1 {
  text-align: center;
}

a {
  color: #0080ff;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

a:visited {
  color: #cc55ff;
}

ul li {
    padding-bottom: 0.5em;
}

form {
  padding: 10px 20px;
}

form > label {
  display: block;
}

form > input {
  width: 100%;
}

form > textarea {
  width: 100%;
  height: 360px;
}

form > button {
  display: block;
  width: 120px;
  height: 30px;
  margin: 30px auto 0 auto;
  font-weight: bold;
  border: 2px solid #0080ff;
  color: #333333;
  background-color: #ffffff;
  border-radius: 5px;
  transition: 0.5s;
}

form > button:hover {
  color: #ffffff;
  background-color: #0080ff;
}

.icon {
  border-radius: 50%;
  width: 60px;
  height: 60px;
  margin: auto;
  display: block;
}

